--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
 body {
-  margin: 0px 0px;  
+  margin: 0px 0px; 
+  padding: 0px; 
 }
 
 .table2 {
-    margin-bottom: 20px;
+    border-spacing:0px 20px;
 }
 
 .box1 {
@@ -22,10 +23,11 @@ body {
     color:white;
     padding: 10px;
     margin: 10px 10px;
+    text-align: center;
 }
 
 .td_image_width {
-    width: 570px;
-    height: 400px;
     display: block;
+    width: 100%;
+    height: 400px;
 }
